@@ -35,4 +35,10 @@ void  diff_pstat (pstat *old,
 
 char* format_pstat (pstat *stats);
 
+void ps_toggle_cb (GtkToggleButton *togglebutton,
+                   gpointer         user_data);
+
+void ps_button_cb (GtkToggleButton *togglebutton,
+                   gpointer         user_data);
+
 #endif
